# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

exports_files([
    "pci_server.cfg",
    "pci_hw.cfg",
    "network_setup.sh",
    "startup.sh",
    "qcrypto.conf",
    "sshd_config",
    "passwd",
    "group",
    "profile",
])

filegroup(
    name = "network_configs",
    srcs = [
        "network_setup.sh",
        "pci_hw.cfg",
        "pci_server.cfg",
        "qcrypto.conf",
        "startup.sh",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "ssh_configs",
    srcs = [
        "group",
        "passwd",
        "profile",
        "sshd_config",
    ],
    visibility = ["//visibility:public"],
)
