# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "serializer",
    hdrs = [
        "AppErrorSerializers.hpp",
        "DeserializeBasicTypes.hpp",
        "IDeserializer.hpp",
        "ISerializer.hpp",
        "SerializeBasicTypes.hpp",
        "SerializerComputeSize.hpp",
        "SerializerTypes.hpp",
        "SerializerUtils.hpp",
    ],
    strip_include_prefix = "",
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "serializer_smoke_test",
    srcs = ["serializer_smoke_test.cpp"],
    deps = [":serializer"],
)
