# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
cc_library(
    name = "reader_serializers",
    hdrs = [
        "serializer_types.h",
        "base_type_serializers.h",
        "abstract_app_factory.h",
        "car_window_factory.h",
    ],
    deps = [
        "//examples/car_window_sim:car_window_types_cpp",
        "//src/serializer",
    ],
    copts = ["-std=c++17"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "arxml_factory_demo",
    srcs = [
        "car_window_arxml_factory_demo.cpp",
    ],
    deps = [
        ":reader_serializers",
    ],
    copts = ["-std=c++17"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "extended_serializer_test",
    srcs = [
        "extended_serializer_test.cpp",
    ],
    deps = [
        ":reader_serializers",
    ],
    copts = ["-std=c++17"],
    visibility = ["//visibility:public"],
)
