# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_test(
    name = "LocalServiceInstance_UT",
    srcs = ["LocalServiceInstance_UT.cpp"],
    deps = [
        "//src/gatewayd:local_service_instance",
        "//src/network_service:consumer",
        "//tests/UT/mocks:mock_config_builder",
        "@googletest//:gtest_main",
        "@score_communication//score/mw/com",
    ],
)
