# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_test(
    name = "RemoteServiceInstance_UT",
    srcs = ["RemoteServiceInstance_UT.cpp"],
    deps = [
        "//src/gatewayd:remote_service_instance",
        "//src/network_service:consumer",
        "//tests/UT/mocks:mock_config_builder",
        "//tests/performance_benchmarks:echo_service",
        "@googletest//:gtest_main",
        "@score_communication//score/mw/com",
        "@score_communication//score/mw/com/impl/mocking:proxy_event_mock",
        "@score_communication//score/mw/com/impl/mocking:proxy_wrapper_class_test_view",
        "@score_communication//score/mw/com/impl/mocking:skeleton_base_mock",
        "@score_communication//score/mw/com/impl/mocking:skeleton_event_mock",
        "@score_communication//score/mw/com/impl/mocking:skeleton_wrapper_class_test_view",
        "@score_communication//score/mw/com/impl/mocking:test_type_utilities",
    ],
)
