# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "mock_config_builder",
    hdrs = ["mock_config_builder.h"],
    visibility = ["//tests/UT:__subpackages__"],
    deps = [
        "//src/gatewayd:config_flatbuffers",
        "@flatbuffers",
    ],
)

cc_library(
    name = "mock_ara_com_types",
    testonly = True,
    hdrs = ["mock_ara_com_types.h"],
    visibility = ["//tests/UT:__subpackages__"],
    deps = [
        "@googletest//:gtest",
        "@score_communication//score/mw/com",
        "@score_communication//score/mw/com/impl/mocking:i_proxy_event",
        "@score_communication//score/mw/com/impl/mocking:i_skeleton_base",
        "@score_communication//score/mw/com/impl/mocking:i_skeleton_event",
    ],
)
