# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
load("@rules_python//python:defs.bzl", "py_library")
load("@score_itf//bazel:py_itf_plugin.bzl", "py_itf_plugin")

py_library(
    name = "dual_qemu_lib",
    srcs = ["dual_qemu_plugin.py"],
    imports = ["."],
    target_compatible_with = ["@platforms//os:linux"],
    visibility = ["//visibility:public"],
    deps = [
        "@score_itf//score/itf/core/target",
        "@score_itf//score/itf/plugins:core",
        "@score_itf//score/itf/plugins/qemu",
    ],
)

py_itf_plugin(
    name = "dual_qemu_plugin",
    enabled_plugins = ["dual_qemu_plugin"],
    py_library = ":dual_qemu_lib",
    target_compatible_with = ["@platforms//os:linux"],
    visibility = ["//visibility:public"],
)
